Remove unnecessary page. Cleaner nav-bar

--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
       <ul class="navbar">
         <li class="nav-item"><a href="#main-content" class="current-selection">HOME</a></li>
         <li class="nav-item"><a href="library.html">FILMS</a></li>
-        <li class="nav-item"><a href="library.html">DIRECTORS</a></li>
         <li class="nav-item"><a href="about.html">ABOUT</a></li>
-        <li class="nav-item"><a href="contact.html">CONTACT</a></li>
         <li class="nav-item"><a href="checkout.html">CHECKOUT</a></li>
-        <li class="nav-item"><form role="search"><input type="search" name="q" placeholder="Search available films..." aria-label="Search thorugh site content"><button>SEARCH</button></form></li>
         <li class="nav-item"><a>LOGIN</a><a>SIGN UP</a></li>
       </ul>
     </nav>
@@ -27,6 +24,7 @@
     <p>flavor text about the film</p>
   </section>
   <main id="main-content">
+    <div class="griditem" id="topgrid"></div>
     <div class="griditem"></div>
     <div class="griditem"></div>
     <div class="griditem"></div>
