update flavor text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&family=Roboto&display=swap" rel="stylesheet"> 
   <title>Square eyes connecting film lovers</title>
 </head>
 <body>
@@ -19,22 +22,50 @@
       </ul>
     </nav>
   </header>
-  <section class="featured-item" aria-labelledby="featured">
-    <h1 id="featured">title of currently featured film</h1>
-    <p>flavor text about the film</p>
+  <section class="featured-item" aria-label="featured movie">
+    <div>
+    <p><em>Planes over valleys</em></p>
+    </div>
   </section>
   <main id="main-content">
-    <div class="griditem" id="topgrid"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
-    <div class="griditem"></div>
+    <div class="griditem" id="topgrid">
+      <h3>Welcome to Square Eyes - connecting film lovers </h3>
+      <p>
+        Browse our most recently added movies here, or click the films tab at the top of the screen to see our entire collection of independently made movies. 
+      </p>
+    </div>
+    <article class="griditem">
+      <img src="/images/movie1.jpg" alt="An alleyway">
+      <p><em>Alley's way</em> - a directorial debut worth checking out</p>
+    </article>
+    <article class="griditem">
+      <img src="/images/movie2.jpg" alt="A field of flowers with a waterfall in the background">
+      <p><em>Waterfalls</em> - rediscovering a nation through it's natural wonders</p>
+    </article>
+    <article class="griditem">
+      <img src="/images/movie3.jpg" alt="Desert dunes at dawn">
+      <p><em>The plains of Cerberus</em> a visual journey across the deserts of Mars.</p>
+    </article>
+    <article class="griditem">
+      <img src="/images/movie4.jpg" alt="oak bark">
+      <p><em>Equivocation:</em> All things that bark are dogs, therefore all trees are dogs. </p>
+    </article>
+    <article class="griditem">
+      <img src="/images/movie5.jpg" alt="a statue of a meditating buddah">
+      <p><em>Achieving Nirvana</em> - an introspective of the modern filmmaker</p>
+    </article>
+    <article class="griditem">
+      <img src="/images/movie6.jpg" alt="a cottage in a forest">
+      <p><em>Hansel and Gretel</em> - a grim reimagining of a grimm story</p>
+    </article>
+    <article class="griditem">
+      <img src="/images/movie7.jpg" alt="a gravel road between some mountains">
+      <p><em>The road less travelled</em> - taking a deeper look at the importance of good infrastructure</p>
+    </article>
+    <article class="griditem">
+      <img src="/images/movie8.jpg" alt="tall trees in a forest">
+      <p><em>The unexpected intelligence</em> - exploring how trees communicate through the mycorrhizal network</p>
+    </article>
   </main>
   <footer>
 
