Add some more responsiveness to main content

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       </ul>
     </nav>
   </header>
-  <section class="featured-item" aria-label="featured movie">
+  <section class="featured-item">
     <div>
-    <p><em>Planes over valleys</em></p>
+    <h1>Planes over valleys</h1>
     </div>
   </section>
   <main id="main-content">
     <div class="griditem" id="topgrid">
-      <h3>Welcome to Square Eyes - connecting film lovers </h3>
+      <h2>Welcome to Square Eyes - connecting film lovers </h2>
       <p>
         Browse our most recently added movies here, or click the films tab at the top of the screen to see our entire collection of independently made movies. 
       </p>
