Add content to all site pages

--- a/about.html
+++ b/about.html
@@ -1,29 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Roboto&display=swap" rel="stylesheet"> 
-        <title>Square eyes connecting film lovers</title>
-      </head>
-      <body>
-        <header class="main-header">
-          <a href="#main-content"><img src="/images/squareeyesLogo.png" alt="Square eyes connecting film-lovers." width="100%"></a>
-          <nav>
-            <ul class="navbar">
-              <li class="nav-item"><a href="index.html" class="current-selection">HOME</a></li>
-              <li class="nav-item"><a href="library.html">FILMS</a></li>
-              <li class="nav-item"><a href="about.html">ABOUT</a></li>
-              <li class="nav-item"><a href="checkout.html">CHECKOUT</a></li>
-              <li class="nav-item"><a>LOGIN</a><a>SIGN UP</a></li>
-            </ul>
-          </nav>
-        </header>
-      
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <title>About - Square Eyes</title>
+  </head>
+  <body>
+    <header class="header">
+      <a href="#main-content"
+        ><img
+          src="/images/squareeyesLogo.png"
+          alt="Square eyes connecting film-lovers."
+          width="100%"
+      /></a>
+      <nav>
+        <ul class="navbar">
+          <li class="nav-item">
+            <a href="index.html">HOME</a>
+          </li>
+          <li class="nav-item"><a href="library.html">FILMS</a></li>
+          <li class="nav-item"><a href="checkout.html">CHECKOUT</a></li>
+          <li class="nav-item"><a>SIGN IN</a><a>SIGN UP</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="left-right-divided">
+      <section>
+        <h1>About</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos
+          animi neque deleniti perferendis dicta cum corporis sapiente
+          obcaecati, quia nesciunt culpa dolorem voluptate officia debitis
+          consequatur dolorum pariatur itaque a aliquam quis. Dignissimos veniam
+          corporis aspernatur amet necessitatibus! Quae architecto quibusdam
+          voluptates laborum possimus laudantium est fugiat autem reiciendis
+          rem. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Voluptatibus doloribus pariatur aspernatur at ipsum velit et amet
+          sapiente odio veritatis! Vero assumenda, asperiores soluta quam id,
+          hic incidunt blanditiis facilis amet totam eos tenetur minus sit.
+          Dolore qui pariatur aspernatur? Blanditiis praesentium consectetur
+          officia animi vero nostrum libero omnis minima!
+        </p>
+      </section>
+      <section>
+        <h1>Contact</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam illo
+          voluptatibus eum quasi nihil nemo, provident qui excepturi eligendi
+          dicta, quia illum molestiae minus beatae reprehenderit suscipit
+          voluptas facilis omnis, pariatur esse in! Commodi ipsam, inventore
+          dignissimos voluptates, natus mollitia dolore sint accusantium soluta
+          impedit at aperiam porro. Placeat, enim? Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Dolorum libero nam consectetur
+          laboriosam ullam inventore fugiat aut, quis culpa repellendus quasi
+          ipsa debitis dolores nihil ea quo iste necessitatibus nulla sit,
+          officiis quam eaque accusamus voluptatum. Molestiae voluptates dicta
+          voluptatem, deleniti iure iste molestias aut cum nam harum, corporis
+          veniam!
+        </p>
+      </section>
+    </main>
+    <footer class="header">
+      <ul class="navbar">
+        <li class="nav-item"><a href="#">ABOUT</a></li>
+        <li class="nav-item"><a href="#">CONTACT</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
